# nine-to-five

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  bacon.toml  compose.yml  docker-compose.yml  linkvercel.sh  mise.toml  mprocs.yaml  now.json  package-lock.json  railway.toml  vercel.json
.circleci/: config.yml
.kamal/: secrets
.run/: api (populate).run.xml  api.run.xml  dev.run.xml  go test gpi.run.xml  reactjs webapp.run.xml  svelte build.run.xml  svelte dev.run.xml
.sqlx/: query-138e66e961fa6bdda44589b983ed7b1fd94e4655b4876c88194b9e2c64e31899.json  query-1576c3e684b33899e3dcd53a5fc006485b7263801b74554daefcffe3ec57f925.json  query-18c9004da4125afdaf27f3a48cfcb893b2a60a0492afa9b3648830a2edcbd302.json  query-198a14f2a3c273209a2ed82e1b9fdb0d132fbe9442c2a82901f9146c12193db5.json  query-268999a185d16d19d545e65d135208628809e3273cd2aeeb77c50b19f6ae13a5.json  query-295d1294d9ef751e130f78f581bcae93d26a5573ab8f7a19e868626308152b90.json  query-3c48538acb278aeabbe3dff3c6f8ec7bed06e8203398bc434046d0ab6ed400d8.json  query-578e118cffe144152363466e19e30e3a64f237903276b1558731b6abbc943991.json  query-579d652276bde55127ac8a0a657c2b43216ea965a8745d37e0c242b2c452e544.json  query-5e7960d03a39be9b4f456b6ded0be73dbc82013b56a7bb1a80e38fe314deefe4.json  query-75735482e30f28dc94e429db9000e6392225e73fc6927d17ed3cc936789d88ec.json  (+9 more)
assets/: manifest.json
rust-app/: .gitignore  Cargo.toml  README.md  bacon.toml  build.rs  compose.yml  package-lock.json  package.json  tailwind.config.js
rust-app/.sqlx/: query-198a14f2a3c273209a2ed82e1b9fdb0d132fbe9442c2a82901f9146c12193db5.json  query-1adfe5409176c417f18bc07da13904c4d6d4ab174ae83af084f89b8f947c5fb5.json  query-1c828df47b092ae88c9083eb61e5d60ee0277d22eadb38a2f03e5864f51b53cb.json  query-1cf63ecd33f9323f299db5b1a1e649c6dfed44198d10e6ca46b42fbc78ca4b8e.json  query-20f693ea615ed6c94ba61ec4447256cc1deb69b30c97c050e6503261dcb9223f.json  query-2acf46f3f319eb7b07163b5cd17e1942e12aeb73d3faff78e2f7ebdeb5680066.json  query-3015ba7407d700d35c9d6b0b52e64290ed8c471308bcbdaa6d63faa8f477145b.json  query-317bcde00f1ed73d07bfdb2927c672fb33030940fc662711a4907c3759952531.json  query-3a54bec0ae5f4cb316176e6f7244f7b070a6dcbd6141ee087e75c9d1ebb903f2.json  query-3ae65a28d56876549c7e5b0cd2270a4e97abb71c8ce8cd362982a72b6d639221.json  query-3b8d10b83d55b2995174e4db9974ee59f96e50a8dda5f3e653c0d04351a9b669.json  query-49f1f0a4284a9a848c2a27772f09def9d5896a4eeec9853bc67635aec0e9f609.json  query-594b94f9ebe523b54ebd9fe626886f7fcaaab89901fef46d1e2e07f9e5f6f323.json  query-5eb57f0c5410a5dfd6bd163b2ed3a23c17425dbcdba77d293ec2bd5e9c7354c7.json  query-5f38b8938e075fb87c36adbdf11e240a5ba1af15b30fbae26eb820da18b7baea.json  query-83f8ea370047b1264c3e758e83ac26848718826666fe51a783c4da2209a9d806.json  query-8662153a9e7c170b966ce08e041141a344d827ace49058d45e385f7e691d9845.json  query-88bb4155da7c7ea29f960d4099bdb87aeb94829e1f1832593bd7bc0b58729c14.json  query-892401e14f6000d4e44faf108fe82fe0b53b1fe7a9c35e062004e650612b5d3b.json  query-8b72fbc900f9b2e27e8fc2ba23560ff695d95106b9304e29618851c0d2056bd6.json  query-9185e92cf8369ff97d2f11288fceccebe43c04b411c4db548c8339749e4b61ed.json  query-a4abe13787afe6dc741c817b53634fdf929b2f9cec5774ffb5d1d78dad5f57e6.json  query-bb39e9952db17b53abc927b46948e67dec936264a77b4d057314f05e79061247.json  query-cc851514e29a2453c5a70ec0f9c99b6975ca9fe47a15150e09394c8ca56f626a.json  query-cd84ce7f0850e898426f346f4b360373dc80fd0130f6cb9e44d0b642ec8c9654.json  query-cf88a8d8c6931e0473b8026f24f1a7acd3bffcc2415b22686b454532b98af0c4.json  query-d4ab7febc6c6f53f4f22d2c2e85cf955053eeb98993b558e69787a7318987891.json  query-ddba193057e111e662ceb7b0b11c422b8aace29298ac6b20e1d91ffd12c93b43.json  query-eb8f37911d481b4d6078e9660b40a7f141a85e2122515f69526a41ec8b3c8950.json
rust-app/assets/css/: output.css
rust-app/migrations/: 20240221154721_tags.sql  20240221155411_activities_tags.sql  20240325155626_metrics.sql  20240327130208_activities_tags.down.sql  20240327130223_metrics.up.sql  20240425191323_tag_search.down.sql
rust-app/src/: activity.rs  auth.rs  encrypt.rs  error.rs  errors.rs  hash.rs  lib.rs  main.rs  metrics.rs  state.rs  states.rs
rust-app/src/activity/: handlers.rs
rust-app/src/import/: mod.rs
rust-app/src/metrics/: handlers.rs
rust-app/templates/: activities.html  app.html  base.html  import.html  index.html  menu.html  metrics.html
rust-app/templates/activities/: create_modal.html  edit_form.html  empty.html  running.html  start_form.html  tag_option_list.html  tag_option_list_with_selection.html
rust-app/templates/metrics/: detail.html  edit_form.html  new_form.html
(+416 files in other folders)
