[package]
name = "nine-to-five"
version = "0.1.0"
edition = "2021"
publish = false


[dependencies]
askama = { version = "0.14" }

axum = "0.8"
axum-macros = "0.5.0"
axum-extra = { version = "0.10.3", features = [
  "cookie",
  "cookie-private",
  "form",
  "typed-header",
  "multipart",
] }
axum_session = { version = "0.17.1", default-features = false, features = [
  "key-store",
] }
axum_session_sqlx = { version = "0.5.1", features = [
  "postgres",
  "tls-native-tls",
] }
serde = "1.0.196"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.6", features = [
  "fs",
  "trace",
  "compression-full",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-native-tls",
  "any",
  "postgres",
  "chrono",
] }
oauth2 = "5.0.0"
chrono = { version = "0.4.34", features = ["clock"] }
dotenvy = "0.15.7"

anyhow = "1.0.79"
thiserror = "2.0.17"
jsonwebtoken = { version = "10.0.0", features = ["rust_crypto"] }
reqwest = { version = "0.12.23", features = ["json"] }
percent-encoding = "2.3.1"
chrono-tz = "0.10.4"
urlencoding = "2.1.3"
serde_json = "1.0.116"
aes-gcm = "0.10.3"
base64 = "0.22.0"
hmac = "0.12.1"
sha2 = "0.10.8"
