[package]
name = "nine-to-five"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.7", features = [
  "runtime-tokio",
  "tls-native-tls",
  "any",
  "postgres",
] }
oauth2 = "4.4.2"
axum-extra = { version = "0.9.2", features = ["cookie-private"] }
serde = "1.0.196"
axum-macros = "0.4.1"
time = "0.3.34"
chrono = { version = "0.4.34", features = ["clock"] }
dotenvy = "0.15.7"
anyhow = "1.0.79"
thiserror = "1.0.57"
axum_session = { version = "0.12.4", default-features = false, features = [
  "postgres-native",
] }
jsonwebtoken = "9.2.0"
reqwest = { version = "0.11.24", features = ["json"] }
