[package]
name = "nine-to-five"
version = "0.1.0"
edition = "2021"
publish = false


[dependencies]
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4.0"

axum = "0.7"
axum-macros = "0.4.1"
axum-extra = { version = "0.9.2", features = [
  "cookie",
  "cookie-private",
  "form",
  "typed-header",
  "multipart",
] }
axum_session = { version = "0.13.0", default-features = false, features = [
  "postgres-native",
  "key-store",
] }
serde = "1.0.196"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5.0", features = [
  "fs",
  "trace",
  "compression-full",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

sqlx = { version = "0.7", features = [
  "runtime-tokio",
  "tls-native-tls",
  "any",
  "postgres",
  "chrono",
] }
oauth2 = "4.4.2"
chrono = { version = "0.4.34", features = ["clock"] }
dotenvy = "0.15.7"

anyhow = "1.0.79"
thiserror = "1.0.57"
jsonwebtoken = "9.2.0"
reqwest = { version = "0.11.24", features = ["json"] }
percent-encoding = "2.3.1"
chrono-tz = "0.8.6"
urlencoding = "2.1.3"
serde_json = "1.0.116"
